fixes layout and hides navbar on smaller screens

--- a/src/app/components/hero/Hero.module.scss
+++ b/src/app/components/hero/Hero.module.scss
@@ -75,7 +75,7 @@
             justify-content: space-evenly;
             align-items: center;
             height: 800px;
-            padding: 28px 16px 28px 16px;
+            padding: 0px 16px 28px 16px;
         }
     }
 }
