--- a/src/app/components/navbar/Nabar.module.scss
+++ b/src/app/components/navbar/Nabar.module.scss
@@ -3,33 +3,39 @@
 .navbar {
     display: flex;
     align-items: center;
+
+    .link {
+        font-family: $font-family;
+        color: $white;
+        font-weight: 400;
+        text-decoration: none;
+        padding: 0px 10px;
+
+    }
+
+    .divider {
+        color: #1F2937;
+        font-family: $font-family;
+        font-weight: 800;
+        margin-left: 14px;
+        margin-right: 24px;
+    }
+
+    .curriculo {
+        font-family: $font-family;
+        color: $darker-blue;
+        font-weight: 400;
+        text-decoration: none;
+        font-size: 16px;
+        background-color: $white;
+        padding: 6px 14px;
+        border-radius: 12px;
+        border-width: 1px;
+    }
 }
 
-.link {
-    font-family: $font-family;
-    color: $white;
-    font-weight: 400;
-    text-decoration: none;
-    padding: 0px 10px;
-
-}
-
-.divider {
-    color: #1F2937;
-    font-family: $font-family;
-    font-weight: 800;
-    margin-left: 14px;
-    margin-right: 24px;
-}
-
-.curriculo {
-    font-family: $font-family;
-    color: $darker-blue;
-    font-weight: 400;
-    text-decoration: none;
-    font-size: 16px;
-    background-color: $white;
-    padding: 6px 14px;
-    border-radius: 12px;
-    border-width: 1px;
+@media (max-width: 768px) {
+    .navbar {
+        display: none;
+    }
 }
